// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`game > cell > Letter > Renders with all props 1`] = `
<div>
  <div
    class="letter test"
  >
    <span
      class="flag"
    >
      <span
        class="flag-wrapper"
      >
        <img
          alt=""
          loading="lazy"
          src="https://flagcdn.com/w20/us.png"
          srcset="https://flagcdn.com/w40/us.png 2x"
          width="20"
        />
      </span>
    </span>
    <span
      class="icon"
    >
      <svg
        class="edit-icon"
        height="48"
        viewBox="0 -960 960 960"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M167-120q-21 5-36.5-10.5T120-167l40-191 198 198-191 40Zm191-40L160-358l473-473q17-17 42-17t42 17l114 114q17 17 17 42t-17 42L358-160Zm317-628L233-346l113 113 442-442-113-113Z"
        />
      </svg>
    </span>
    <span
      class="container"
    >
      E
    </span>
  </div>
</div>
`;

exports[`game > cell > Letter > Renders with no props 1`] = `
<div>
  <div
    class="letter"
  >
    <span
      class="flag"
    >
      <span
        class="flag-wrapper"
      >
        <img
          alt=""
          loading="lazy"
          src="https://flagcdn.com/w20/pl.png"
          srcset="https://flagcdn.com/w40/pl.png 2x"
          width="20"
        />
      </span>
    </span>
    <span
      class="icon"
    >
      <svg
        class="edit-icon"
        height="48"
        viewBox="0 -960 960 960"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M167-120q-21 5-36.5-10.5T120-167l40-191 198 198-191 40Zm191-40L160-358l473-473q17-17 42-17t42 17l114 114q17 17 17 42t-17 42L358-160Zm317-628L233-346l113 113 442-442-113-113Z"
        />
      </svg>
    </span>
    <span
      class="container"
    />
  </div>
</div>
`;
